test/regress/coverage-expr-error.test
; Coverage test for expr.cc
; Expression evaluation error produces context info

2024/01/01 Test
    Expenses:Food            $10.00
    Assets:Cash

test reg -l "amount + unknown_func()" -> 1
__ERROR__
While evaluating value expression:
  (amount + unknown_func())
            ^^^^^^^^^^^^^^
While handling posting from "$FILE", line 5:
>     Expenses:Food            $10.00
Error: Unknown identifier 'unknown_func'
end test
